--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/webstorm-icon-logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WS playground</title>
-  <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>The most useful Russian learning websites</title>
 </head>
 <body>
-<header class="logo">
-  <a href="https://www.jetbrains.com/webstorm/">
-    <img src="/webstorm-logo.svg" alt="WebStorm logo" width="344"
-         height="90">
-  </a>
-</header>
-<main id="app">
-  <h1 class="title">
-    Thank you for trying it out. <br /> Your first project is up and running
-    now.
-  </h1>
-  <section class="counter">
-    <div class="counter-info">
-      <p class="counter-text">Counter is</p>
-      <p class="counter-value" id="counter-value"></p>
-    </div>
-    <div class="counter-interaction">
-      <button id="increaseByOne" type="button">+1</button>
-      <button id="increaseByTwo" type="button">+2</button>
-      <button id="decreaseByOne" type="button">-1</button>
-      <button id="decreaseByTwo" type="button">-2</button>
-    </div>
-  </section>
-</main>
-<footer class="technologies">
-  <img src="/technologies.svg" alt="List of supported technologies">
-</footer>
-<script type="module" src="/src/main.js"></script>
+<h1 align="center" class="three-color-title" ><font color="#ffd700" face=微软雅黑>最好用的俄语学习网站</font></h1>
+<table class="russian-tools-table">
+    <tr>
+        <td>
+            <div class="tool-title"><a href="http://dabkrs.com" target="_blank" class="three-color-title">俄语翻译</a></div>
+            <div class="tool-desc">提供精准的俄汉互译，支持单词、短语及句子翻译，适配日常与专业场景。</div>
+        </td>
+        <td>
+            <div class="tool-title"><a href="video_hei%20da%20e%20yu.html" target="_blank" class="three-color-title">黑大俄语课本语音</a></div>
+            <div class="tool-desc">配套黑龙江大学俄语教材，提供课文、单词标准发音，助力听力与口语练习。</div>
+        </td>
+        <td>
+            <div class="tool-title"><a href="http://dabkrs.com" target="_blank" class="three-color-title">俄语查词</a></div>
+            <div class="tool-desc">涵盖海量俄语词汇，支持词根查询、例句展示及词性解析，满足学习需求。</div>
+        </td>
+        <td>
+            <div class="tool-title">俄语校对</div>
+            <div class="tool-desc">玩命开发中</div>
+        </td>
+    </tr>
+</table>
+<div>
+
+
+</div>
 </body>
 </html>
